chore: refine tsconfig.json
